16573
```scala
private object A {
  private class B

}

// Error
class A private(b: A.B)

/*
// OK if I move the constructor to `def this`:
class A private() {
   private def this(b: A.B) = this()
}
*/
```
```scala
A.scala:6: error: not found: type B
class A private(b: B)
                   ^
one error found
```
